--- a/home.css
+++ b/home.css
@@ -161,7 +161,9 @@
     }
     #introduction
     {
-        font-size: 18px;
+        max-width: 90%;
+        font-size: 16px;
+        line-height: 1.4;
     }
     #blank
     {
@@ -184,7 +186,7 @@
         font-size: 22.5px;
     }
 }
-@media  (min-width:1200px)
+@media (min-width:1200px)
 {
     #alternative-menu
     {
