--- a/tactics.css
+++ b/tactics.css
@@ -331,7 +331,7 @@
         width: 80%;
         p
         {
-            font-size: 25;
+            font-size: 25pxs;
         }
     }
     #blank
